{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 76,
  "lineage": "de7cfc1f-69d7-1d6d-e02d-492cc16acbbb",
  "resources": [
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/backendAddressPools/be_pool1",
                "ip_address_list": [
                  "10.2.0.0"
                ],
                "ip_addresses": [
                  "10.2.0.0"
                ],
                "name": "be_pool1"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/backendHttpSettingsCollection/be_http_setting1",
                "name": "be_http_setting1",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 2
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/frontendIPConfigurations/feport-name-01-Ip-Config",
                "name": "feport-name-01-Ip-Config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/publicIPAddresses/test-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/frontendPorts/feport-name-01",
                "name": "feport-name-01",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/gatewayIPConfigurations/appgw-test-IP-Config",
                "name": "appgw-test-IP-Config",
                "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-ExtWAF-Net01"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/frontendIPConfigurations/feport-name-01-Ip-Config",
                "frontend_ip_configuration_name": "feport-name-01-Ip-Config",
                "frontend_port_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/frontendPorts/feport-name-01",
                "frontend_port_name": "feport-name-01",
                "host_name": "",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/httpListeners/listener1",
                "name": "listener1",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test",
            "identity": [],
            "location": "southeastasia",
            "name": "appgw-test",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/backendAddressPools/be_pool1",
                "backend_address_pool_name": "be_pool1",
                "backend_http_settings_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/backendHttpSettingsCollection/be_http_setting1",
                "backend_http_settings_name": "be_http_setting1",
                "http_listener_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/httpListeners/listener1",
                "http_listener_name": "listener1",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/applicationGateways/appgw-test/requestRoutingRules/rule1",
                "name": "rule1",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "Transit-Network-RG",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "tags": {},
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "depends_on": [
            "azurerm_public_ip.appgwPip"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-ExtWAF-NSG",
            "location": "southeastasia",
            "name": "Prod-ExtWAF-NSG",
            "resource_group_name": "Transit-Network-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 1000,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rule2",
                "priority": 1001,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rule3",
                "priority": 1002,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Prod-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-IntWAF-NSG",
            "location": "southeastasia",
            "name": "Prod-IntWAF-NSG",
            "resource_group_name": "Transit-Network-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 1000,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rule2",
                "priority": 1001,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rule3",
                "priority": 1002,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Prod-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-ExtWAF-NSG/securityRules/rule1",
            "name": "rule1",
            "network_security_group_name": "Prod-ExtWAF-NSG",
            "priority": 1000,
            "protocol": "TCP",
            "resource_group_name": "Transit-Network-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-ExtWAF-NSG/securityRules/rule2",
            "name": "rule2",
            "network_security_group_name": "Prod-ExtWAF-NSG",
            "priority": 1001,
            "protocol": "TCP",
            "resource_group_name": "Transit-Network-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-ExtWAF-NSG/securityRules/rule3",
            "name": "rule3",
            "network_security_group_name": "Prod-ExtWAF-NSG",
            "priority": 1002,
            "protocol": "TCP",
            "resource_group_name": "Transit-Network-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-IntWAF-NSG/securityRules/rule1",
            "name": "rule1",
            "network_security_group_name": "Prod-IntWAF-NSG",
            "priority": 1000,
            "protocol": "TCP",
            "resource_group_name": "Transit-Network-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-IntWAF-NSG/securityRules/rule2",
            "name": "rule2",
            "network_security_group_name": "Prod-IntWAF-NSG",
            "priority": 1001,
            "protocol": "TCP",
            "resource_group_name": "Transit-Network-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-IntWAF-NSG/securityRules/rule3",
            "name": "rule3",
            "network_security_group_name": "Prod-IntWAF-NSG",
            "priority": 1002,
            "protocol": "TCP",
            "resource_group_name": "Transit-Network-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.appgw",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgwPip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "fqdn": "0a86ef8d-e6cc-4b73-9a15-612439bad8a6.cloudapp.net",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/publicIPAddresses/test-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.76.83.49",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "test-appgw-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "Transit-Network-RG",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "module": "module.Transit-Hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/26",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "Transit-Network-RG",
            "virtual_network_name": "Transit-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.224/27",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "Transit-Network-RG",
            "virtual_network_name": "Transit-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.64/26",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-ExtWAF-Net01",
            "name": "Prod-ExtWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-ExtWAF-NSG",
            "resource_group_name": "Transit-Network-RG",
            "virtual_network_name": "Transit-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.128/26",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-IntWAF-Net01",
            "name": "Prod-IntWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-IntWAF-NSG",
            "resource_group_name": "Transit-Network-RG",
            "virtual_network_name": "Transit-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-ExtWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-ExtWAF-NSG",
            "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-ExtWAF-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-IntWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-IntWAF-NSG",
            "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-IntWAF-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Transit-Hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/22"
            ],
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet",
            "location": "southeastasia",
            "name": "Transit-VNet",
            "resource_group_name": "Transit-Network-RG",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/26",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.1.0.128/26",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-IntWAF-Net01",
                "name": "Prod-IntWAF-Net01",
                "security_group": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-IntWAF-NSG"
              },
              {
                "address_prefix": "10.1.0.64/26",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/Prod-ExtWAF-Net01",
                "name": "Prod-ExtWAF-Net01",
                "security_group": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Prod-ExtWAF-NSG"
              },
              {
                "address_prefix": "10.1.3.224/27",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Transit-Network-RG/providers/Microsoft.Network/virtualNetworks/Transit-VNet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.rgroup"
          ]
        }
      ]
    }
  ]
}